mdapipkg/unpackaged/objects/Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <description>what is the expected monthly revenue for this account?</description>
        <inlineHelpText>What is the expected monthly revenue for this account?</inlineHelpText>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Real_Order_value__c</fullName>
        <description>What is the real order value during the forecast period?</description>
        <inlineHelpText>What is the real order value during the forecast period?</inlineHelpText>
        <label>Real Order value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Expected_Revenue__c</columns>
        <columns>Real_Order_value__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Revenue Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>